--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
-        <h1 class="text-4xl mb-4">Cifrado de Transposición</h1>
+        <h1 class="text-4xl mb-4">Cifrado de Transposicion</h1>
+        <div class="flex flex-col md:flex-row">
+            <div class="flex-grow">
+              <h2 class="text-xl mb-2">Nombre: Univ. Pablo Andres Fernandez Cari</h2>
+            </div>
+            <div class="flex-grow">
+              <h2 class="text-xl mb-2">Materia: INF - 154</h2>
+            </div>
+        </div>
+        <p class="mt-4 text-lg">
+            Bienvenido a esta herramienta de cifrado de transposición. Aquí puedes cifrar y descifrar mensajes utilizando el método de cifrado de columnas. Para comenzar, simplemente ingresa tu mensaje en el cuadro de texto de "Mensaje original", luego ingresa el orden de las columnas (por ejemplo, 2,1,4,3) en el campo correspondiente. Luego, puedes hacer clic en "Cifrar" para cifrar tu mensaje, o "Descifrar" para descifrar un mensaje cifrado. El resultado se mostrará en el cuadro de texto de abajo.
+        </p>
         <textarea id="inputText" class="w-full p-2 border border-gray-300 rounded" rows="10" placeholder="Mensaje original"></textarea>
         <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-300 rounded" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
         <button id="encryptButton" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
+        <button id="decryptButton" class="mt-4 ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
         <textarea id="outputText" class="mt-4 w-full p-2 border border-gray-300 rounded" rows="10" readonly></textarea>
     </div>
     <script src="script.js"></script>
