--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cifrado de Columnas</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body { background-color: #1a202c; color: #cbd5e0; }
+        .bg-blue-500 { background-color: #4299e1; }
+        .bg-green-500 { background-color: #48bb78; }
+        .border-gray-300 { border-color: #2d3748; }
+    </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-900 text-gray-100">
     <div class="container mx-auto p-4">
         <h1 class="text-4xl mb-4">Cifrado de Transposicion</h1>
+        <!-- El botón para cambiar el modo (añadir esto al principio del div.container) -->
+        <div class="flex justify-end">
+            <button id="themeToggleButton" class="px-4 py-2 bg-gray-300 text-black rounded">Cambiar Modo</button>
+        </div>
         <div class="flex flex-col md:flex-row">
             <div class="flex-grow">
               <h2 class="text-xl mb-2">Nombre: Univ. Pablo Andres Fernandez Cari</h2>
@@ -20,11 +30,12 @@
         <p class="mt-4 text-lg">
             Bienvenido a esta herramienta de cifrado de transposición. Aquí puedes cifrar y descifrar mensajes utilizando el método de cifrado de columnas. Para comenzar, simplemente ingresa tu mensaje en el cuadro de texto de "Mensaje original", luego ingresa el orden de las columnas (por ejemplo, 2,1,4,3) en el campo correspondiente. Luego, puedes hacer clic en "Cifrar" para cifrar tu mensaje, o "Descifrar" para descifrar un mensaje cifrado. El resultado se mostrará en el cuadro de texto de abajo.
         </p>
-        <textarea id="inputText" class="w-full p-2 border border-gray-300 rounded" rows="10" placeholder="Mensaje original"></textarea>
-        <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-300 rounded" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
+
+        <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" placeholder="Mensaje original"></textarea>
+        <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
         <button id="encryptButton" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
         <button id="decryptButton" class="mt-4 ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
-        <textarea id="outputText" class="mt-4 w-full p-2 border border-gray-300 rounded" rows="10" readonly></textarea>
+        <textarea id="outputText" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" readonly></textarea>
     </div>
     <script src="script.js"></script>
 </body>
