--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </p>
 
         <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" placeholder="Mensaje original"></textarea>
+        <input id="fecha" class="mt-4 w-full p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
         <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
         <button id="encryptButton" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
         <button id="decryptButton" class="mt-4 ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
