--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p class="mt-4 text-lg">
             Bienvenido a esta herramienta de cifrado de transposición. Aquí puedes cifrar y descifrar mensajes utilizando el método de cifrado de columnas. Para comenzar, simplemente ingresa tu mensaje en el cuadro de texto de "Mensaje original", luego ingresa el orden de las columnas (por ejemplo, 2,1,4,3) en el campo correspondiente. Luego, puedes hacer clic en "Cifrar" para cifrar tu mensaje, o "Descifrar" para descifrar un mensaje cifrado. El resultado se mostrará en el cuadro de texto de abajo.
         </p>
-
         <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" placeholder="Mensaje original"></textarea>
         <input id="fecha" class="mt-4 w-full p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
+        <button id="fechaButton" class="mt-4 ml-4 px-4 py-2 bg-blue-500 text-white rounded">Insertar fecha actual</button>
         <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
         <button id="encryptButton" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
         <button id="decryptButton" class="mt-4 ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
