--- a/index.html
+++ b/index.html
@@ -28,15 +28,33 @@
             </div>
         </div>
         <p class="mt-4 text-lg">
-            Bienvenido a esta herramienta de cifrado de transposición. Aquí puedes cifrar y descifrar mensajes utilizando el método de cifrado de columnas. Para comenzar, simplemente ingresa tu mensaje en el cuadro de texto de "Mensaje original", luego ingresa el orden de las columnas (por ejemplo, 2,1,4,3) en el campo correspondiente. Luego, puedes hacer clic en "Cifrar" para cifrar tu mensaje, o "Descifrar" para descifrar un mensaje cifrado. El resultado se mostrará en el cuadro de texto de abajo.
+            Bienvenido a esta herramienta de cifrado de transposición. Aquí puedes cifrar y descifrar mensajes utilizando el método de cifrado de columnas. Para comenzar, sigue los pasos a continuación:
         </p>
-        <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" placeholder="Mensaje original"></textarea>
-        <input id="fecha" class="mt-4 w-full p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
-        <button id="fechaButton" class="mt-4 ml-4 px-4 py-2 bg-blue-500 text-white rounded">Insertar fecha actual</button>
-        <input id="columnOrder" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
-        <button id="encryptButton" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
-        <button id="decryptButton" class="mt-4 ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
-        <textarea id="outputText" class="mt-4 w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" readonly></textarea>
+        <ol class="list-decimal list-inside">
+            <li>Introduce tu mensaje en el cuadro de texto de "Mensaje original" y una fecha para cifrar o decifrar un mensaje. (El 'orden de las columnas' se calcula automaticamente)</li>
+            <li>Puede presionar "Insertar fecha actual" para usar la fecha de hoy y también introducir el orden de las columnas.</li>
+        </ol>
+        <div class="mt-4">
+            <label for="inputText">Mensaje original:</label>
+            <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10"></textarea>
+        </div>
+        <div class="mt-4">
+            <label for="fecha">Fecha:</label>
+            <input id="fecha" class="w-full p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
+            <button id="fechaButton" class="mt-2 px-4 py-2 bg-blue-500 text-white rounded">Insertar fecha actual</button>
+        </div>
+        <div class="mt-4">
+            <label for="columnOrder">Orden de las columnas:</label>
+            <input id="columnOrder" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
+        </div>
+        <div class="mt-4">
+            <button id="encryptButton" class="px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
+            <button id="decryptButton" class="ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
+        </div>
+        <div class="mt-4">
+            <label for="outputText">Mensaje cifrado/descifrado:</label>
+            <textarea id="outputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10" readonly></textarea>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
