--- a/index.html
+++ b/index.html
@@ -35,24 +35,28 @@
             <li>Introduce tu mensaje en el cuadro de texto de "Mensaje original" y una fecha para cifrar o decifrar un mensaje. (El 'orden de las columnas' se calcula automaticamente)</li>
             <li>Puede presionar "Insertar fecha actual" para usar la fecha de hoy y también introducir el orden de las columnas.</li>
         </ol>
-        <div class="mt-4">
-            <label for="inputText">Mensaje original:</label>
-            <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10"></textarea>
-        </div>
-        <div class="mt-4">
-            <label for="fecha">Fecha:</label>
-            <div class="flex items-center">
-                <input id="fecha" class="flex-grow p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
-                <button id="fechaButton" class="ml-2 px-4 py-2 bg-blue-500 text-white rounded">Insertar fecha actual</button>
+        <div class="flex flex-col md:flex-row">
+            <div class="mt-4 flex-grow pr-4">
+                <label for="inputText">Mensaje original:</label>
+                <textarea id="inputText" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" rows="10"></textarea>
             </div>
-        </div>
-        <div class="mt-4">
-            <label for="columnOrder">Orden de las columnas:</label>
-            <input id="columnOrder" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
-        </div>
-        <div class="mt-4">
-            <button id="encryptButton" class="px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
-            <button id="decryptButton" class="ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
+            <div class="flex-grow">
+                <div class="mt-4">
+                    <label for="fecha">Fecha:</label>
+                    <div class="flex items-center">
+                        <input id="fecha" class="flex-grow p-2 border border-gray-300 rounded bg-gray-800 text-gray-300" type="text" placeholder="Introduzca la fecha (ejemplo: 28/06/00)">
+                        <button id="fechaButton" class="ml-2 px-4 py-2 bg-blue-500 text-white rounded">Insertar fecha actual</button>
+                    </div>
+                </div>
+                <div class="mt-4">
+                    <label for="columnOrder">Orden de las columnas:</label>
+                    <input id="columnOrder" class="w-full p-2 border border-gray-700 rounded bg-gray-800 text-gray-300" type="text" placeholder="Orden de las columnas (ejemplo: 2,1,4,3)">
+                </div>
+                <div class="mt-4">
+                    <button id="encryptButton" class="px-4 py-2 bg-blue-500 text-white rounded">Cifrar</button>
+                    <button id="decryptButton" class="ml-4 px-4 py-2 bg-green-500 text-white rounded">Descifrar</button>
+                </div>
+            </div>
         </div>
         <div class="mt-4">
             <label for="outputText">Mensaje cifrado/descifrado:</label>
