--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="flex flex-col md:flex-row">
             <div class="mt-4 flex-grow pr-4">
                 <div class="mt-4">
-                    <label for="numberText">Primer paso:</label>
+                    <label for="numberText">Primer paso: (Enumerar letras)</label>
                     <textarea id="numberText" class="output-field w-full p-2 border border-gray-700 rounded bg-gray-700 text-gray-300" rows="3" readonly></textarea>
                 </div>
                 <label for="outputText">Mensaje cifrado/descifrado:</label>
